# vyane-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.zh-CN.md  profiles.example.toml
.cargo/: config.toml
.github/scripts/: parity-report.py  publish-workspace.sh  release-gate.py  test-release-gate.sh
.github/workflows/: ci.yml  publish.yml
.zcode/plans/: plan-sess_f5bc60a7-5da5-49e2-a9be-138ce71aa5cf.md
crates/vyane-agent/: Cargo.toml
crates/vyane-agent/migrations/: 0001_agent.sql  0002_completion.sql  0003_projection_dispositions.sql  0004_execution_backend.sql
crates/vyane-agent/src/: error.rs  lib.rs  model.rs  sqlite.rs  store.rs
crates/vyane-agent/tests/: completion_contract.rs  execution_permit_contract.rs  store_contract.rs
crates/vyane-broker/: Cargo.toml
crates/vyane-broker/src/: adapter.rs  agent_projector.rs  broker.rs  error.rs  lib.rs  projector.rs  supervisor.rs
crates/vyane-broker/tests/: agent_projector_contract.rs  broker_contract.rs  projector_contract.rs  supervisor_contract.rs
crates/vyane-cli/: Cargo.toml
crates/vyane-cli/src/: a2a.rs  agent_host.rs  agent_process.rs  agent_spool.rs  api.rs  app.rs  cli.rs  command.rs  daemon.rs  daemon_agent.rs  daemon_client.rs  daemon_goal.rs  daemon_workflow.rs  factory.rs  goal.rs  goal_runtime.rs  harness.rs  main.rs  mcp_workflow.rs  native_agent.rs  native_agent_spool.rs  output.rs  review.rs  supervisor.rs  workflow_control.rs
crates/vyane-cli/src/task/: mod.rs  proc.rs  spawn.rs  store.rs
crates/vyane-cli/tests/: a2a_acceptance.rs  cli_acceptance.rs  daemon_agent_acceptance.rs  daemon_goal_acceptance.rs  daemon_workflow_acceptance.rs  detach_acceptance.rs  goal_acceptance.rs  parity_manifest.rs
crates/vyane-config/: Cargo.toml
crates/vyane-config/src/: layer.rs  lib.rs  model.rs  resolve.rs  secrets.rs
crates/vyane-config/tests/: example_config.rs  roundtrip_and_secrets.rs
crates/vyane-core/: Cargo.toml
crates/vyane-core/src/: chat.rs  env.rs  error.rs  lib.rs  native_authority.rs  run.rs  session.rs  target.rs  task.rs  tool_chat.rs  traits.rs  workdir.rs
crates/vyane-goal/: Cargo.toml
crates/vyane-goal/migrations/: 0001_goals.sql  0002_claim_lease.sql  0003_verification_artifacts.sql  0004_pursuit_checkpoint.sql  0005_recovery_indexes.sql  0006_goal_continuity.sql  0006_takeover_approval.sql  0007_review_handback.sql  0007_takeover_approval.sql  0008_review_handback.sql
crates/vyane-goal/src/: acceptance.rs  approval.rs  continuity.rs  error.rs  lib.rs  model.rs  projection.rs  pursuit.rs  sqlite.rs  store.rs
crates/vyane-goal/tests/: claim_lease.rs  continuity.rs  continuity_projection.rs  pursuit.rs  store_contract.rs  takeover_approval.rs
crates/vyane-harness/: Cargo.toml
crates/vyane-harness/src/: claude_code.rs  codex_cli.rs  lib.rs  parse.rs  probe.rs  spawn.rs
crates/vyane-harness/src/native/: mod.rs  permissions.rs  text_edit.rs  tools.rs  turn_driver.rs
crates/vyane-harness/tests/: fake_cli.rs  native_turn_driver.rs  text_edit.rs
crates/vyane-kernel/: Cargo.toml
crates/vyane-kernel/src/: broadcast.rs  capability.rs  digest.rs  dispatch.rs  executor.rs  lib.rs
crates/vyane-kernel/tests/: acceptance.rs
crates/vyane-ledger/: Cargo.toml
crates/vyane-ledger/src/: cost.rs  event.rs  jsonl.rs  lib.rs  session.rs
crates/vyane-ledger/tests/: event_log.rs  jsonl_ledger.rs  session_store.rs
crates/vyane-mcp/: Cargo.toml
crates/vyane-mcp/src/: lib.rs
crates/vyane-mcp/tests/: mcp_tools.rs  workflow_control.rs
crates/vyane-message/: Cargo.toml
crates/vyane-message/migrations/: 0001_messages.sql  0002_publication_gate.sql
crates/vyane-message/src/: error.rs  lib.rs  model.rs  sqlite.rs  store.rs
crates/vyane-message/tests/: store_contract.rs
crates/vyane-protocol/: Cargo.toml
crates/vyane-protocol/src/: anthropic_messages.rs  http.rs  lib.rs  openai_chat.rs  openai_responses.rs  retry.rs  sse.rs  wire.rs
crates/vyane-protocol/tests/: authorized_openai_chat.rs  protocol_clients.rs
crates/vyane-provider/: Cargo.toml
crates/vyane-provider/src/: lib.rs
crates/vyane-quota/: Cargo.toml
crates/vyane-quota/src/: http.rs  lib.rs  model.rs  runner.rs
crates/vyane-quota/tests/: quota.rs
crates/vyane-router/: Cargo.toml
crates/vyane-router/src/: decision.rs  intent.rs  lib.rs  preference.rs  route.rs  score.rs  tags.rs
crates/vyane-service/: Cargo.toml
crates/vyane-service/src/: agent.rs  agent_completion.rs  agent_completion_publisher.rs  agent_execution.rs  agent_recovery.rs  agent_supervisor.rs  config.rs  diagnostics.rs  factory.rs  goal.rs  goal_continuity_runner.rs  goal_observation.rs  inprocess_agent.rs  lib.rs  message.rs  native_authority.rs  owner.rs  routing.rs  selector.rs  service.rs  task.rs
crates/vyane-task/: Cargo.toml
crates/vyane-task/migrations/: 0001_tasks.sql  0002_owner_scope.sql
crates/vyane-task/src/: error.rs  lib.rs  model.rs  sqlite.rs  store.rs
crates/vyane-task/tests/: store_contract.rs
crates/vyane-workflow/: Cargo.toml
crates/vyane-workflow/src/: engine.rs  error.rs  journal.rs  lib.rs  model.rs  plan.rs  source.rs  template.rs  validate.rs
crates/vyane-workflow/tests/: workflow_acceptance.rs
docs/: ARCHITECTURE.md  ROADMAP.md
docs/adr/: 0001-deterministic-routing-core.md  0002-workflow-frontends-and-resume.md  0003-separate-solution-and-change-review.md  0004-modular-supervisor-host.md  0005-execution-authority-and-capability-admission.md  README.md
docs/parity/: ORIGINAL-VYANE-PARITY.md
docs/parity/fixtures/v1/: automatic-routing.json  failover.json  manifest.json  routing.json
docs/plan/: WP-01.md  WP-02.md  WP-03.md  WP-04.md  WP-05.md  WP-06.md  WP-07.md  WP-08.md  WP-09.md  WP-37.md  WP-38.md  WP-39.md  WP-40.md  WP-41.md  WP-42.md  WP-43.md  WP-44.md  WP-45.md  WP-46.md  WP-47.md  WP-48.md  WP-49.md  WP-50.md  WP-51.md  WP-52.md  WP-53.md  WP-54.md  WP-55.md  WP-56.md  WP-57.md  WP-58.md  WP-59.md  WP-60.md  WP-61.md  WP-62.md  WP-63.md  WP-64.md  WP-65.md  WP-66.md  WP-67.md  (+22 more)
