[workspace]
resolver = "3"
members = [
    "crates/vyane-core",
    "crates/vyane-agent",
    "crates/vyane-message",
    "crates/vyane-goal",
    "crates/vyane-task",
    "crates/vyane-config",
    "crates/vyane-provider",
    "crates/vyane-protocol",
    "crates/vyane-harness",
    "crates/vyane-kernel",
    "crates/vyane-ledger",
    "crates/vyane-broker",
    "crates/vyane-router",
    "crates/vyane-workflow",
    "crates/vyane-service",
    "crates/vyane-mcp",
    "crates/vyane-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zleo-ai/vyane-rs"
rust-version = "1.85"

[workspace.dependencies]
# intra-workspace — version required for crates.io publish (path stripped on publish)
vyane-core = { path = "crates/vyane-core", version = "0.1.0" }
vyane-agent = { path = "crates/vyane-agent", version = "0.1.0" }
vyane-message = { path = "crates/vyane-message", version = "0.1.0" }
vyane-goal = { path = "crates/vyane-goal", version = "0.1.0" }
vyane-task = { path = "crates/vyane-task", version = "0.1.0" }
vyane-config = { path = "crates/vyane-config", version = "0.1.0" }
vyane-provider = { path = "crates/vyane-provider", version = "0.1.0" }
vyane-protocol = { path = "crates/vyane-protocol", version = "0.1.0" }
vyane-harness = { path = "crates/vyane-harness", version = "0.1.0" }
vyane-kernel = { path = "crates/vyane-kernel", version = "0.1.0" }
vyane-ledger = { path = "crates/vyane-ledger", version = "0.1.0" }
vyane-broker = { path = "crates/vyane-broker", version = "0.1.0" }
vyane-router = { path = "crates/vyane-router", version = "0.1.0" }
vyane-workflow = { path = "crates/vyane-workflow", version = "0.1.0" }
vyane-service = { path = "crates/vyane-service", version = "0.1.0" }
vyane-mcp = { path = "crates/vyane-mcp", version = "0.1.0" }

# async runtime & io
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util", "signal", "fs"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"

# http
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip"] }
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# mcp server
rmcp = { version = "0.5", features = ["server", "macros", "transport-io"] }
schemars = "1"

# errors
thiserror = "2"
anyhow = "1"

# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# misc
uuid = { version = "1", features = ["v7", "serde"] }
sha2 = "0.10"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fs4 = "0.13"
getrandom = "0.4"
libc = "0.2"
rustix = { version = "1.1.4", features = ["process"] }
command-fds = { version = "0.3.3", features = ["tokio"] }
rusqlite = { version = "0.38.0", default-features = false, features = ["bundled", "limits"] }

# cli
clap = { version = "4", features = ["derive", "env"] }

# dev
tempfile = "3"
wiremock = "=0.6.4"
static_assertions = "1"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
