[package]
name = "vyane-cli"
description = "The vyane binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vyane"
path = "src/main.rs"

[dependencies]
vyane-core = { workspace = true }
vyane-config = { workspace = true }
vyane-protocol = { workspace = true }
vyane-harness = { workspace = true }
vyane-kernel = { workspace = true }
vyane-ledger = { workspace = true }
vyane-workflow = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
