[package]
name = "vyane-cli"
description = "The vyane binary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vyane"
path = "src/main.rs"

[dependencies]
vyane-core = { workspace = true }
vyane-config = { workspace = true }
vyane-protocol = { workspace = true }
vyane-harness = { workspace = true }
vyane-kernel = { workspace = true }
vyane-ledger = { workspace = true }
vyane-workflow = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }

# Crate-local lints: the workspace denies `unsafe_code`, but vyane-cli — like
# vyane-harness — is pre-approved to use `unsafe` strictly for detached-worker
# process control: the `setsid(2)` `pre_exec` hook that puts each worker in its
# own process group, and the `kill(2)` calls that group-signal a worker on
# `task cancel` and probe worker liveness for orphan detection. These are the
# only `unsafe` blocks in the crate; every one carries a SAFETY comment. All
# other lints mirror the workspace configuration.
[lints.rust]
unsafe_code = "allow"

[lints.clippy]
unwrap_used = "warn"
