[package]
name = "vyane-cli"
description = "The vyane binary"
keywords = ["ai", "llm", "orchestration", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vyane"
path = "src/main.rs"

[dependencies]
vyane-core = { workspace = true }
vyane-task = { workspace = true }
vyane-config = { workspace = true }
vyane-protocol = { workspace = true }
vyane-harness = { workspace = true }
vyane-kernel = { workspace = true }
vyane-ledger = { workspace = true }
vyane-workflow = { workspace = true }
vyane-service = { workspace = true }
vyane-mcp = { workspace = true }
vyane-message = { workspace = true }
vyane-goal = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
fs4 = { workspace = true }
getrandom = { workspace = true }
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
tower = { workspace = true }
dashmap = "6"

[target.'cfg(unix)'.dependencies]
command-fds = { workspace = true }
nix = { version = "=0.28.0", default-features = false, features = ["fs"] }
process-wrap = { version = "=8.0.2", default-features = false, features = ["std", "tokio1", "process-session"] }
rustix = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
vyane-provider = { workspace = true }
vyane-router = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
