[package]
name = "vyane-config"
description = "Configuration and profile resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vyane-core = { workspace = true }
vyane-provider = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[lints]
workspace = true
