[package]
name = "vyane-goal"
description = "Owner-scoped durable goal lifecycle and progress persistence for Vyane"
keywords = ["ai", "goals", "sqlite", "orchestration", "persistence"]
categories = ["database", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
