[package]
name = "vyane-goal"
description = "Owner-scoped durable goal lifecycle and progress persistence for Vyane"
keywords = ["ai", "goals", "sqlite", "orchestration", "persistence"]
categories = ["database", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
