[package]
name = "vyane-harness"
description = "Clean-env coding CLI adapters and native permission-gated tool execution"
keywords = ["ai", "llm", "orchestration", "cli", "process"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vyane-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
command-fds = { workspace = true }
rustix = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
static_assertions = { workspace = true }

[lints]
workspace = true
