[package]
name = "vyane-kernel"
description = "The dispatch kernel: target resolution, failover, broadcast, run accounting"
keywords = ["ai", "llm", "orchestration", "kernel", "failover"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vyane-core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
vyane-ledger = { workspace = true }
# `test-util` adds the paused-clock helpers (`start_paused`, time advance) the
# acceptance suite uses to drive delayed mocks and timeouts deterministically.
tokio = { workspace = true, features = ["test-util"] }
async-stream = "0.3"
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
