[package]
name = "vyane-message"
description = "Owner-safe transactional messages and delivery leases for Vyane"
keywords = ["ai", "messages", "sqlite", "queue", "orchestration"]
categories = ["database", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
getrandom = { workspace = true }
fs4 = { workspace = true }
libc = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
