[package]
name = "vyane-provider"
description = "Provider registry: endpoints, credentials, auth material"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vyane-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
