[package]
name = "vyane-quota"
description = "Bounded platform-neutral upstream quota snapshot contracts for Vyane"
keywords = ["ai", "quota", "observability", "orchestration"]
categories = ["asynchronous", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
