[package]
name = "vyane-router"
description = "Deterministic target selection: complexity scoring, tag inference, tier mapping, and preference resolution"
keywords = ["ai", "llm", "orchestration", "routing", "routing-policy"]
categories = ["command-line-utilities", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }

[lints]
workspace = true
