[package]
name = "vyane-task"
description = "Durable task metadata and lifecycle persistence for Vyane"
keywords = ["ai", "tasks", "sqlite", "orchestration", "persistence"]
categories = ["database", "development-tools"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
